crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@binary-spec-source-record.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: package 'source' is locked as a source package, but the manifest requires it as a binary package
