crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@source-record-host-dep-mismatch.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
assertion_line: 3626
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'linux-64'
    Diagnostic severity: error
    Caused by: source package 'my-package' requires rebuild or re-evaluation; forcing a full re-lock
